# fleiadex

./: .gitignore  README.md  __init__.py  conditional_ddpm_config.yaml  diffuser_main.py  discover_latent_space.ipynb  express_example.sh  pyproject.toml  run_tests.sh  setup.py  show_training_in_notebook.ipynb  vae_config.yaml  vae_main.py
config/: conditional_ddpm_config.py  config.py  default_config.py  earthformer_attention_config.py  global_config.py  ldm_config.py  predictor_config.py  time_series_ldm_config.py  transformer_attention_config.py  transformer_config.py  vae_config.py
config/backbone_specs/: __init__.py  earthformer_spec.py  unet_4d_conv_2d_spec.py  vanilla2d_spec.py
config/utils/: vae_base.py
config/vae/: config.yaml
data/: data_factory.ipynb
data/utils/: .___init__.py  ._data_fetcher.py  __init__.py  data_fetcher.py  data_processing.py
legacy/: beta_schedules.py  default_config.py
notebooks/: Experiment.ipynb
src/: README.md  __init__.py
src/fleiadex/: __init__.py
src/fleiadex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: ddpm_benchmark.py
src/modules/: blocks.py
src/pleiades/: __init__.py
src/utils/: beta_schedules.py  load_dataset.py  loss.py
src/vae/: main.py  models.py  train.py
training_scripts/: log_reader.py
training_scripts/diffuser/: main.py
training_scripts/diffusor/: main.py
training_scripts/vae/: apply_vae.ipynb  main.py  restore_ckpt.py
vae/: main.py
vae/src/: cnn_models.py  train.py
vae/utils/: __init__.py  auto_designers.py  load_dataset.py  save_image.py  (+1 more)
(+203 files in other folders)
